force-app/main/default/objects/Job_Application1__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate1__c</referenceTo>
    <relationshipLabel>Job Applications1</relationshipLabel>
    <relationshipName>Job_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>