force-app/main/default/objects/Job_Application1__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position1__c</referenceTo>
    <relationshipLabel>Job Applications1</relationshipLabel>
    <relationshipName>Job_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>